tests/valid/module/child_access_parent_private.facet
mod api {
  fn id(x: affine isize) -> affine isize { x }

  mod child {
    fn call(x: affine isize) -> affine isize {
      (id x)
    }
  }
}

fn main() -> affine isize {
  1
}
