tests/invalid/module/private_sibling_access.facet
mod a {
  fn id(x: affine isize) -> affine isize { x }
}

mod b {
  fn call() -> affine isize {
    (a::id 1)
  }
}
